# dvkbuntu-easy-menu-qt

./: CMakeLists.txt  README.md  WidFromPid  cmake_install.cmake  dvkbuntu-easy-menu-qt  dvkbuntu-easy-menu-qt.desktop  dvkbuntu-easy-menu-qt.pro  dvkbuntu-easy-menu-qt_fr_FR.ts  install  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
.cmake/api/v1/reply/: cmakeFiles-v1-303c04c9d3bd9a8aeb2b.json  cmakeFiles-v1-dd4cc0625fc881a7b084.json  codemodel-v2-25ffb2f352d8307c8fe6.json  index-2021-03-14T17-28-03-0996.json  index-2021-03-14T19-34-16-0407.json  target-dvkbuntu-easy-menu-qt-Debug-98c0fbc449188aa64ea3.json
.github/workflows/: main.yml
dvkbuntu-easy-menu-qt_autogen/: moc_predefs.h  mocs_compilation.cpp
dvkbuntu-easy-menu-qt_autogen/UVLADIE3JM/: moc_controlmenu.cpp  moc_controlmenumain.cpp  moc_mainwindow.cpp
dvkbuntu-easy-menu-qt_autogen/include/: ui_controlmenu.h  ui_controlmenumain.h  ui_mainwindow.h
src/: controlmenu.cpp  controlmenu.h  controlmenu.ui  controlmenumain.cpp  controlmenumain.h  controlmenumain.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  options.cpp  options.h  options.ui  resource.qrc
